--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,6 +5,7 @@
 
   <body class="d-flex flex-column h-100">
     <main class="flex-shrink-0 container mt-5">
+      <head>This is a simple potfolio</head>
       {% include navbar.html %} {{ content }}
     </main>
 
